--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,22 @@
 {
+  "workbench.colorTheme": "Material Theme Ocean High Contrast",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "javascript.updateImportsOnFileMove.enabled": "always",
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "workbench.iconTheme": "material-icon-theme",
+  "tailwindCSS.emmetCompletions": false,
+  // Run ESLint each time you save a file
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
+  "[javascript,typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "eslint.packageManager": "npm",
+  "eslint.enable": true,
+  "eslint.alwaysShowStatus": true,
+  "eslint.validate": ["javascript", "typescript"],
+  "files.exclude": {
+    "node_modules/": true
+  }
 }
