--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,13 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # Environment Variables
-.env.dev
+.env
+.env.local
+.env.development
 .env.test
-.env.prod
+.env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
 .vercel
