--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dusttrap",
+  "name": "dustackle",
   "version": "0.0.1",
   "description": "A dustbot API that gives you the amount of fine dust in one area without a specified format. Natural Language Processing...!",
   "author": "cliid",
