Probably this is v1

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 FB_MESSENGER_ACCESS_TOKEN=
 FB_WEBHOOK_VERIFY_TOKEN=
 DIALOGFLOW_PROJECT_ID=
-AIRKOREA_FINEDUST_API_SERVICE_KEY=
+DIALOGFLOW_CREDENTIALS=
+VWORLD_ACCESS_TOKEN=
+AIRKOREA_API_SERVICE_KEY=
