--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,12 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "useTabs": false,
-  "trailingComma": "none",
-  "bracketSpacing": true
+    "semi": true,
+    "tabWidth": 2,
+    "useTabs": false,
+    "arrowParens": "always",
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "printWidth": 120,
+    "quoteProps": "consistent",
+  "bracketSpacing": true,
+  "endOfLine": "lf"
 }
