--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build:prod": "tsc",
     "build:dev": "tsc -w",
-    "start": "node build/index.js",
+    "start:prod": "node build/index.js",
     "start:dev": "nodemon build/index.js",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
