--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "dustackle",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A dustbot API that gives you the amount of fine dust in one area without a specified format. Natural Language Processing...!",
   "scripts": {
-    "build:prod": "tsc",
-    "build:dev": "tsc -w",
-    "start:prod": "node build/index.js",
-    "start:dev": "nodemon build/index.js",
+    "prebuild": "rimraf dist",
+    "build": "tsc",
+    "start": "node dist/main.js",
+    "start:prod": "node dist/main.js",
+    "start:dev": "nodemon src/main.ts",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
     "prepare": "husky install"
   },
   "keywords": [],
-  "author": "",
+  "author": "cliid",
   "license": "AGPL-3.0",
   "dependencies": {
     "@google-cloud/dialogflow": "^4.5.0",
@@ -42,6 +42,8 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "lint-staged": {
