--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@google-cloud/dialogflow": "^4.5.0",
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "fastify": "^3.24.1",
     "fastify-env": "^2.1.1",
     "fastify-plugin": "^3.0.0",
