--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "start": "node dist/main.js",
-    "start:prod": "node dist/main.js",
-    "start:dev": "nodemon src/main.ts",
+    "dev": "nodemon src/main.ts",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
     "prepare": "husky install"
