--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "pino-pretty": "^7.2.0",
     "prettier": "^2.5.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
