--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A dustbot API that gives you the amount of fine dust in one area without a specified format. Natural Language Processing...!",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc",
-    "start": "node dist/main.js",
-    "dev": "nodemon src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/main.js",
+    "dev": "nodemon -r tsconfig-paths/register src/main.ts",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
     "prepare": "husky install"
@@ -39,12 +39,15 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "pino-pretty": "^7.2.0",
     "prettier": "^2.5.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.2"
   },
   "lint-staged": {
