--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc -p tsconfig.json",
     "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/main.js",
     "dev": "nodemon -r tsconfig-paths/register src/main.ts",
-    "lint": "eslint src/**/*.ts",
-    "format": "eslint src/**/*.ts --fix",
+    "lint": "eslint src/**/*.{js,ts}",
+    "format": "eslint src/**/*.{js,ts} --fix",
     "prepare": "husky install"
   },
   "keywords": [],
