Fixed bug where tsconfig.json doesn't accept 'include' which is out of the rootDir.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES5",
     "experimentalDecorators": true,
     "module": "commonjs",
-    "rootDir": "./src",
+    "rootDir": ".",
     "baseUrl": "./src",
     "paths": {
       "@/lib/*": ["lib/*"],
