--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.json",
-    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/main.js",
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/src/main.js",
     "dev": "nodemon -r tsconfig-paths/register src/main.ts",
     "lint": "eslint src/**/*.{js,ts}",
     "format": "eslint src/**/*.{js,ts} --fix",
